# setup.py read info here
[metadata]
name = agdb
version = 0.4.0
description = "Atom graph database, for simple and fast dataset management"
description-file = README.md
url = "https://gitlab.pjlab.org.cn/hugengyuan/atom-graph-database"
license = "Apache License 2.0"
license_files = "LICENSE"
# classifiers = # for details, see https://pypi.org/pypi?%3Aaction=list_classifiers
#     Development Status :: 3 - Alpha
#     Intended Audience :: Science/Research
#     License :: OSI Approved :: Apache License 2.0
#     Programming Language :: Python :: 3.8  # because of f-string heavily used
#     Programming Language :: Python :: 3.9
#     Programming Language :: Python :: 3.10
#     Programming Language :: Python :: 3.11

[options]
platforms = linux
packages = agdb
# packages = find:  # auto find dir with __init__.py
install_requires =
    numpy



